# lab8

./: Dockerfile  answers.md  crawler.py  pyproject.toml
