[tool.poetry]
name = "lab8"
version = "0.1.0"
description = ""
authors = ["Semmy Purewal"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
aiohttp = "^3.9.4"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
